# android_ffmpeg

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hubing/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HAudio.cpp  HAudio.h  HVideo.cpp  HVideo.h  HViedoPlayer.cpp  Log.h  SLESPlayer.cpp  ffmpegAudio.cpp  ffmpegAudio.h  native-lib.cpp
app/src/main/java/com/hubing/ffmpeg/: AudioPlayer.java  FFmpegUtils.java  MainActivity.java  VideoActivity.java  VideoView.java
app/src/main/java/com/hubing/ffmpeg/hvideo/: HVideoActivity.java  HVideoView.java
app/src/main/res/layout/: activity_hvideo.xml  activity_main.xml  activity_video.xml
app/src/test/java/com/hubing/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
